objects/USA_Briefcase_Admin_Settings__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>Account_Trends_Webservice_URL__c</fullName>
        <description>The URL/Webservice provided by the Pernod Ricard data warehouse team for Account-level trend data.</description>
        <inlineHelpText>The URL/Webservice provided by the Pernod Ricard data warehouse team for Account-level trend data.</inlineHelpText>
        <label>Account Trends Webservice URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Updates_on_Cellular_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Updates on Cellular Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Update_URL__c</fullName>
        <inlineHelpText>Indicate the URL users will go to install the app.</inlineHelpText>
        <label>App Update URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Image_ID__c</fullName>
        <label>Background Image ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefcase_News_Group_ID__c</fullName>
        <description>Salesforce ID of the Chatter group that populates the News tab in Briefcase</description>
        <inlineHelpText>Salesforce ID of the Chatter group that populates the News tab in Briefcase</inlineHelpText>
        <label>Briefcase News Group ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Names__c</fullName>
        <description>For reporting.  Optional Multi-Select field.  Selectable values stored In USA Briefcase Admin Settings object</description>
        <label>Chain Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Names__c</fullName>
        <formula>Global_Chatter_Groups__c &amp; &quot;;&quot; &amp;  $User.USA_Chatter_Group_Team_Membership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Group Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Survey_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for surveys that are not targeted for a specific account.  (e.g. Trivia)</inlineHelpText>
        <label>Default Survey Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>USA Briefcase Admin Settings</relationshipLabel>
        <relationshipName>USA_Briefcase_Admin_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Blocks and forces user to update if they are on an older version.</inlineHelpText>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Chatter_Groups__c</fullName>
        <label>Global Chatter Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Report_IDs__c</fullName>
        <label>Global Report IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homepage_Alert_Short_Text__c</fullName>
        <inlineHelpText>Type the short text that appears on the Home Page Alert</inlineHelpText>
        <label>Homepage Alert Short Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homepage_Alert__c</fullName>
        <inlineHelpText>Alert that appears on the top of the Briefcase homes page.</inlineHelpText>
        <label>Homepage Alert</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Latest_App_Version__c</fullName>
        <inlineHelpText>Latest version of the briefcase app.  Will be used to force an update.</inlineHelpText>
        <label>Latest App Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <description>For Briefcase Reporting.  Managers optional Multi-Select field. Selectable values stored In USA Briefcase Admin Settings object</description>
        <label>Managers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Rep_Filters__c</fullName>
        <label>Map Rep Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Subtier_Filters__c</fullName>
        <label>Map Subtier Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Tier_Filters__c</fullName>
        <label>Map Tier Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Wines_Subtier_Filters__c</fullName>
        <label>Map Wines Subtier Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Wines_Tier_Filters__c</fullName>
        <label>Map Wines Tier Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives_Calendar_ID__c</fullName>
        <label>Objectives Calendar ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_IDs__c</fullName>
        <formula>Global_Report_IDs__c &amp; 
 IF(AND(LEN(Global_Report_IDs__c)&gt;1,LEN($User.USA_User_Report_IDs__c)&gt;1),&quot;,&quot;,&quot;&quot;) 
&amp; $User.USA_User_Report_IDs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report IDs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Names__c</fullName>
        <description>For Briefcase Reporting Mandatory Single-Select field.  Selectable values stored In USA Briefcase Admin Settings object.</description>
        <label>Report Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Webservice_URL__c</fullName>
        <defaultValue>&quot;helloworld&quot;</defaultValue>
        <inlineHelpText>Enter the URL for the web service used by the reporting feature on the Briefcase app homepage.</inlineHelpText>
        <label>Reporting Webservice URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Do_Categories__c</fullName>
        <inlineHelpText>Add categories for To-Dos, comma-separated</inlineHelpText>
        <label>To Do Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Reminder_Frequency__c</fullName>
        <label>Update Reminder Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Account_Trends_Webservice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if Account Trends in Briefcase should be populated by the webservice listed in the Account Trends  Webservice URL field</inlineHelpText>
        <label>Use Account Trends Webservice</label>
        <type>Checkbox</type>
    </fields>
    <label>USA Briefcase Admin Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>USA Briefcase Admin Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USA Briefcase Admin Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>